--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -8,9 +8,11 @@
     padding: .5rem;
 }
 
-#header h1
+#header #page-title
 {
-    margin-top: 0;
+	margin: 0 0 1rem 0;
+	font-size: 2rem;
+	font-weight: bold;
 }
 
 @media screen and (max-width: 800px) {
