Add .original class

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -7,6 +7,7 @@
 {
     --primary: hsl(216, 37%, 30%);
     --primary-dark: hsl(217, 89%, 59%);
+    --hue-rotate: 40deg;
 }
 
 html,
@@ -29,6 +30,11 @@ body
     color: var(--primary);
     filter: hue-rotate(40deg);
     background-color: #fdffc8;
+}
+
+.original
+{
+    filter: hue-rotate(calc(var(--hue-rotate) * -1));
 }
 
 ::-webkit-scrollbar {
