--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,6 +6,9 @@
     color: white;
     overflow: hidden;
     padding: .5rem;
+
+    display: flex;
+    gap: 1rem;
 }
 
 #header #page-title
@@ -13,6 +16,32 @@
 	margin: 0 0 1rem 0;
 	font-size: 2rem;
 	font-weight: bold;
+}
+
+#header-title-container a
+{
+    text-decoration: none;
+    color: white;
+}
+
+#header-links
+{
+    flex: 1;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#header-links a
+{
+    color: white;
+    margin: 0 .5rem;
+}
+
+.contact-link-container a
+{
+    color: white;
 }
 
 @media screen and (max-width: 800px) {
