Center title and subtitle

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -50,3 +50,10 @@ body
 ::-webkit-scrollbar-corner {
     background: var(--primary);
 }
+
+h1,
+h1 + h2
+{
+    text-align: center !important;
+    text-align-last: center !important;
+}
