--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -3,12 +3,20 @@
     width: 100%;
     background: var(--primary-dark);
 
-    color: white;
+    color: var(--color);
     overflow: hidden;
     padding: .5rem;
 
     display: flex;
     gap: 1rem;
+
+    --primary-dark-opcaity: 0.3;
+    /* background: var(--primary-dark); */
+    background: hsla(217, 89%, 59%, 0.3);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 8.5px );
+    -webkit-backdrop-filter: blur( 8.5px );
+    /*! border-radius: 10px; */
 }
 
 #header #page-title
@@ -21,7 +29,7 @@
 #header-title-container a
 {
     text-decoration: none;
-    color: white;
+    color: var(--color);
 }
 
 #header-links
@@ -35,13 +43,13 @@
 
 #header-links a
 {
-    color: white;
+    color: var(--color);
     margin: 0 .5rem;
 }
 
 .contact-link-container a
 {
-    color: white;
+    color: var(--color);
 }
 
 @media screen and (max-width: 800px) {
@@ -49,5 +57,13 @@
     {
         margin: 0;
         font-size: 1.75rem;
+    }
+}
+
+@media screen and (min-width: 1240px) {
+    #header
+    {
+        padding-left: var(--max-container-padding);
+        padding-right: var(--max-container-padding);
     }
 }
