--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -15,6 +15,8 @@
 
     --max-container-width: 1240px;
     --max-container-padding: calc(calc(100vw - var(--max-container-width)) / 2);
+
+    --accent: #C6FFDD;
 }
 
 html,
@@ -26,7 +28,7 @@ body
 
 html
 {
-	scrollbar-color: var(--primary) #C6FFDD;
+	scrollbar-color: var(--primary) var(--accent);
 	scrollbar-width: thin;
 }
 
@@ -62,7 +64,7 @@ body
 ::-webkit-scrollbar {
     height: 12px;
     width: 8px;
-    background: transparent;
+    background: var(--accent);
 }
 
 ::-webkit-scrollbar-thumb {
